--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
 		</dependency>
 
 <!--		 https://mvnrepository.com/artifact/org.jacoco/org.jacoco.agent -->
-		<dependency>
-			<groupId>org.jacoco</groupId>
-			<artifactId>org.jacoco.agent</artifactId>
-			<version>0.8.8</version>
-			<scope>test</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.jacoco</groupId>-->
+<!--			<artifactId>org.jacoco.agent</artifactId>-->
+<!--			<version>0.8.3</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 
 <!--		<dependency>-->
 <!--			<groupId>org.jacoco</groupId>-->
@@ -80,68 +80,50 @@
 
 	<build>
 		<plugins>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-surefire-plugin</artifactId>-->
-<!--				<version>2.21.0</version>-->
-<!--				<dependencies>-->
-<!--					<dependency>-->
-<!--						<groupId>org.junit.platform</groupId>-->
-<!--						<artifactId>junit-platform-surefire-provider</artifactId>-->
-<!--						<version>1.2.0</version>-->
-<!--					</dependency>-->
-<!--					<dependency>-->
-<!--						<groupId>org.jacoco</groupId>-->
-<!--						<artifactId>jacoco-maven-plugin</artifactId>-->
-<!--						<version>0.8.3</version>-->
-<!--					</dependency>-->
-<!--				</dependencies>-->
-<!--				<configuration>-->
-<!--					<excludes>-->
-<!--						<exclude>**/*IT.java</exclude>-->
-<!--					</excludes>-->
-<!--				</configuration>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>integration-test</id>-->
-<!--						<goals>-->
-<!--							<goal>test</goal>-->
-<!--						</goals>-->
-<!--						<phase>integration-test</phase>-->
-<!--						<configuration>-->
-<!--							<excludes>-->
-<!--								<exclude>none</exclude>-->
-<!--							</excludes>-->
-<!--							<includes>-->
-<!--								<include>**/*IT.java</include>-->
-<!--							</includes>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-<!--			<plugin>-->
-<!--				<groupId>org.jacoco</groupId>-->
-<!--				<artifactId>jacoco-maven-plugin</artifactId>-->
-<!--				<version>0.8.3</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<goals>-->
-<!--							<goal>prepare-agent</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--					<execution>-->
-<!--						<id>jacoco-report</id>-->
-<!--						<phase>test</phase>-->
-<!--						<goals>-->
-<!--							<goal>report</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--			</plugin>-->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.10</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+
+					<execution>
+						<id>jacoco-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>PACKAGE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.9</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
